src/main/java/com/example/pismobank/errors/AccountNotFoundException.java
package com.example.pismobank.errors;

public class AccountNotFoundException extends RuntimeException {
}
